<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="55dp"
            android:paddingRight="30dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="01dp"
                android:layout_marginBottom="40dp"
                android:background="@null"
                android:src="@drawable/msg_chat"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:id="@+id/rel_reg"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/gra_white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/log_in_account"
                    android:textColor="#464c63"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="#ea5d72">

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="45dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/sample_mail"
                        android:inputType="textEmailAddress"
                        android:textColor="#464c63"
                        android:textColorHighlight="#464c63"
                        android:textColorHint="#ea5d72"
                        android:textColorLink="#ea5d72"
                        android:textSize="15sp"
                        tools:ignore="Autofill,RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="160dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="05dp"
                    android:background="@drawable/gra_pink"
                    android:text="@string/log_inn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="#ea5d72"
                    app:passwordToggleDrawable="@drawable/pass_icon_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="45dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/stars"
                        android:inputType="textPassword"
                        android:textColor="#464c63"
                        android:textColorHighlight="#464c63"
                        android:textColorHint="#ea5d72"
                        android:textColorLink="#ea5d72"
                        android:textSize="15sp"
                        tools:ignore="Autofill,RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/linkForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#464c63" />

            <TextView
                android:id="@+id/linkSingUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/already_new"
                android:textColor="#ea5d72"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/copyrightTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/if_you_create_acc" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>