<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8"
    android:orientation="vertical"
    tools:context="chat.infobox.hasnat.ume.ume.ForgotPassword.ForgotPassActivity">

    <include
        android:id="@+id/fp_toolbar"
        layout="@layout/all_app_bar_layout"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/raspberry"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="#464c63"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/gra_white"
            android:orientation="vertical">

            <Button
                android:id="@+id/resetPassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gra_pink"
                android:padding="10dp"
                android:text="@string/give_me_link"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="#ea5d72"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/forgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/sample_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="#464c63"
                    android:textColorHighlight="#464c63"
                    android:textColorHint="#ea5d72"
                    android:textColorLink="#ea5d72"
                    android:textSize="15sp"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/if_you_press_button" />
    </LinearLayout>

</LinearLayout>